kubernetes/apps/network/kong/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
spec:
  gatewayClassName: kong
  listeners:
    - name: proxy
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    # - name: proxy-ssl
    #   port: 443
    #   protocol: HTTPS
    #   hostname: "*.janpuc.com"
    #   tls:
    #     certificateRefs:
    #       - kind: Secret
    #         group: ""
    #         name: wildcard-janpuc-com-cert
    #         namespace: ""
